--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       </div>
       <div class="title">Introduction<br>
       </div>
-      This is a tool to help create heroes from the Anvil of Apotheosis with all the restrictions baked into the options. I am in no way connected with Games Workshop or White Dwarf. The Anvil of Apotheosis is their creation and i only made this site for fun.<br>
+      This is a tool to help create heroes from the Anvil of Apotheosis with all the restrictions baked into the options. I am in no way connected with Games Workshop or White Dwarf. The Anvil of Apotheosis is their creation and i only made this site for fun, only thing i personally added is the dawi zharr ancestry.<br>
       <div class="title">Information<br>
       </div>
-      I am working as fast as i can to add all the options, i will update the checklist when that happens. If you find any errors send me an email at <a href="mailto:chorfenjoyer@cock.li">chorfenjoyer@cock.li</a>. I will continue to create similar things for tabletop games in the future, if you want to support me in my work you can give a poor student a coffee at <a href="buymeacoffee.com/chorfenjoyer">buymeacoffee.com/chorfenjoyer</a> ;)
+      I am working as fast as i can to add all the options, i will update the checklist when that happens. If you find any errors or have any questions you can send me an email at <a href="mailto:chorfenjoyer@cock.li">chorfenjoyer@cock.li</a>. I will continue to create similar things for tabletop games in the future, if you want to support me in my work you can give a poor student a coffee at <a href="https://www.buymeacoffee.com/chorfenjoyer">https://www.buymeacoffee.com/chorfenjoyer</a> ;)
     </div>
 
     <div class="rightsidebox">Checklist: <br>
