--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
       <div class="category" id="archetypecategory">
         <input type="button" id="archetypecategorybutton" value="+" onclick="setVisible('archetypecategory')">
-        3. Arcetype
+        3. Archetype
         <div class="subcategory">
           <div id="archetype" class="dropdown">
             <span id="archetype-span">3.1. Select Archetype</span>
