--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html><html lang="en"><head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1NLFRYVRZH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-1NLFRYVRZH');
+  </script>
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
     <script src="abilities.js"></script>
