--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
+    <meta name="google-site-verification" content="ebjSFcuDiWvZOqs-ExG4MpLWwob9LRjMrjZPuihG7NY" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1NLFRYVRZH"></script>
   <script>
