added some stuff

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       This is a tool to help create heroes from the Anvil of Apotheosis with all the restrictions baked into the options. I am in no way connected with Games Workshop or White Dwarf. The Anvil of Apotheosis is their creation and i only made this site for fun, only thing i personally added is the dawi zharr ancestry.<br>
       <div class="title">Information<br>
       </div>
-      I am working as fast as i can to add all the options, i will update the checklist when that happens. This was developed for standard 1080 screens so the site will not look alright on thin screens and on phones. If you find any errors or have any questions you can send me an email at <a href="mailto:chorfenjoyer@cock.li">chorfenjoyer@cock.li</a>. I will continue to create similar things for tabletop games in the future, if you want to support me in my work you can give a poor student a coffee at <a href="https://www.buymeacoffee.com/chorfenjoyer">https://www.buymeacoffee.com/chorfenjoyer</a> ;)
+      I am working as fast as i can to add all the options, i will update the checklist when that happens. This was developed for standard 1080 screens so the site will not look alright on thin screens and on phones but i will create an app for this as well. If you find any errors or have any questions you can send me an email at <a href="mailto:chorfenjoyer@cock.li">chorfenjoyer@cock.li</a>. I will continue to create similar things for tabletop games in the future, if you want to support me in my work you can give a poor student a coffee at <a href="https://www.buymeacoffee.com/chorfenjoyer">https://www.buymeacoffee.com/chorfenjoyer</a> ;)
     </div>
 
     <div class="rightsidebox">Checklist: <br>
