--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="rightsidebox">Checklist: <br>
       Anvil of Apotheosis - Done <br>
       Anvil of Chaos - Not added <br>
-      Anvil of Blood - Not added <br>
+      Anvil of Blood - Added 11/09-21 <br>
       Anvil of Destruction - Not added <br></div>
     <div class ="mainbody" id="mainbody">
       <div class ="category" id="ancestrycategory">
