--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       </div>
       <div class="category" id="armourycategory">
-        <input type="button" id="armourycategorybutton" value="+" onclick="setVisible('armourycategory')">
+        <input type="button" id="armourycategorybutton" class="btn btn-secondary" value="+" onclick="setVisible('armourycategory')">
         2. The Armoury
         <div class="subcategory">
           <div id="weapon1" class="dropdown">
@@ -79,7 +79,7 @@
         </div>
       </div>
       <div class="category" id="archetypecategory">
-        <input type="button" id="archetypecategorybutton" value="+" onclick="setVisible('archetypecategory')">
+        <input type="button" id="archetypecategorybutton" class="btn btn-secondary" value="+" onclick="setVisible('archetypecategory')">
         3. Archetype
         <div class="subcategory">
           <div id="archetype" class="dropdown">
