--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <body>
     <div class ="mainbody" id="mainbody">
       <div class ="category" id="ancestrycategory">
-        <input type="button" id="ancestrycategorybutton" value="+" onclick="setVisible('ancestrycategory')">
+        <input type="button" id="ancestrycategorybutton" class="btn btn-secondary" value="+" onclick="setVisible('ancestrycategory')">
         1. Ancestry
         <div class="subcategory">
           <div class="dropdown">
@@ -97,7 +97,7 @@
         </div>
       </div>
       <div class="category" id="companioncategory">
-        <input type="button" id="companioncategorybutton" value="+" onclick="setVisible('companioncategory')">
+        <input type="button" id="companioncategorybutton" class="btn btn-secondary" value="+" onclick="setVisible('companioncategory')">
         4. Bestial Companion
         <div class="subcategory">
           <div id="companion" class="dropdown">
@@ -113,7 +113,7 @@
         </div>
       </div>
       <div class="category" id="charactercategory">
-        <input type="button" id="charactercategorybutton" value="+" onclick="setVisible('charactercategory')">
+        <input type="button" id="charactercategorybutton" class="btn btn-secondary" value="+" onclick="setVisible('charactercategory')">
         5. Characteristic Enhancements and Abilites
         <div class="subcategory">
           <div id="characterabilities">
@@ -123,7 +123,7 @@
         </div>
       </div>
       <div class="category" id="namecategory">
-        <input type="button" id="namecategorybutton" value="+" onclick="setVisible('namecategory')">
+        <input type="button" id="namecategorybutton" class="btn btn-secondary" value="+" onclick="setVisible('namecategory')">
         6. Naming your hero
         <div class="subcategory">
           <span>6.1. Character Name
